[tool.poetry]
name = "KerasFuse"
version = "0.01"
description = "KerasFuse is a Python library that combines the power of TensorFlow and Keras with various computer vision techniques for medical image analysis tasks."
authors = ["Ayyuce Demirbas <a.ayyuced@gmail.com>"]
maintainers = ["Ayyuce Demirbas <a.ayyuced@gmail.com>"]
readme = "README.md"
packages = [{include = "kerasfuse"}]
homepage = "https://github.com/ayyucedemirbas/KerasFuse"
repository = "https://github.com/ayyucedemirbas/KerasFuse"
documentation = "https://github.com/ayyucedemirbas/KerasFuse/blob/main/README.md"
keywords = ["Tensorflow","Keras","KerasFuse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
# Supported python versions match from original tensorflow https://www.tensorflow.org/install
python = ">=3.8.1,<3.12.0"
tensorflow = {version = ">=2.12.0", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = ">=2.12.0", markers = "sys_platform == 'darwin'"}
keras = "^2.12.0"
scikit-learn = "^1.2.2"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
bandit = "^1.7.4"
debugpy = "^1.6.6"
rope = "^1.7.0"
wheel = "^0.38.4"
setuptools = "^67.4.0"
coverage = "^7.2.1"
pre-commit = "^3.1.1"
pyupgrade = "^3.3.1"
ruff = "^0.0.244"
pytest = "^7.2.1"
toml = "^0.10.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
parameterized = "^0.9.0"



[tool.isort]
line_length = 88
profile = "black"

[tool.bandit]
target = ["tests", "kerasfuse"]
tests = ["B201", "B301"]

[tool.autoflake]
check = true
imports = ["cv2", "requests", "kerafuse"]


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
